feat: 회원 상세 화면 세팅

--- a/module-admin/src/main/resources/templates/member/tab/detail.html
+++ b/module-admin/src/main/resources/templates/member/tab/detail.html
@@ -1,10 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+
+<form method="post" id="adoptForm" name="adoptForm">
+    <div class="card-header p-t-0 p-b-0">
+        <h3 class="sub-title"><strong>기본정보</strong></h3>
+    </div>
+    <div class="card-block-small p-t-0">
+        <div class="row">
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>아이디</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>가입수단</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>비밀번호</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>닉네임</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>회원상태</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>회원가입일시</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>최근접속일시</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>휴면전환일시</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+                <div class="row form-group required mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>회원탈퇴일시</strong></label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card-block-small">
+        <button type="button" class="btn btn-gray m-r-5" id="cancelBtn">취소</button>
+        <button type="button" class="btn btn-primary" id="saveBtn">저장</button>
+    </div>
+</form>
