--- a/module-admin/src/main/resources/templates/member/entrypoint.html
+++ b/module-admin/src/main/resources/templates/member/entrypoint.html
@@ -24,11 +24,7 @@
         </ul>
     </div>
     <div class="card-block">
-        <div class="row m-b-30">
-            <div class="col-lg-12">
-                <div class="tab-content card-block" id="tabContentArea">
-                </div>
-            </div>
+        <div class="tab-content " id="tabContentArea">
         </div>
     </div>
 </div>
