--- a/module-admin/src/main/resources/templates/member/tab/adoption.html
+++ b/module-admin/src/main/resources/templates/member/tab/adoption.html
@@ -1,4 +1,4 @@
-<div class="card-header p-t-0 p-b-0">
+<div class="card-header p-b-0">
     <h3 class="sub-title"><strong>분양기록</strong></h3>
 </div>
 <div class="card-block-small p-t-0">
