--- a/module-admin/src/main/resources/templates/member/tab/detail.html
+++ b/module-admin/src/main/resources/templates/member/tab/detail.html
@@ -1,7 +1,5 @@
-
-
-<form method="post" id="adoptForm" name="adoptForm">
-    <div class="card-header p-t-0 p-b-0">
+<form method="post" id="detailForm" name="detailForm">
+    <div class="card-header  p-b-0">
         <h3 class="sub-title"><strong>기본정보</strong></h3>
     </div>
     <div class="card-block-small p-t-0">
