--- a/module-admin/src/main/resources/templates/member/tab/report.html
+++ b/module-admin/src/main/resources/templates/member/tab/report.html
@@ -1,5 +1,5 @@
-<div class="card-header p-t-0 p-b-0">
-    <h3 class="sub-title"><strong>차단</strong></h3>
+<div class="card-header p-b-0">
+    <h3 class="sub-title"><strong>신고</strong></h3>
 </div>
 <div class="card-block-small p-t-0">
     <div class="dt-responsive table-responsive">
