--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -389,3 +389,9 @@ table.dataTable tbody tr.selected > *{
     border-bottom-right-radius: calc(.3rem - 1px);
     border-bottom-left-radius: calc(.3rem - 1px);
 }
+
+.dataTable .border-checkbox-section .border-checkbox-group .border-checkbox-label{
+    margin: 0px;
+    margin-top: 7px;
+    margin-left: 8px;
+}
