--- a/module-admin/src/main/resources/templates/saesigManage/chattingForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/chattingForm.html
@@ -6,111 +6,50 @@
                 <div class="slide"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#profile3" role="tab" aria-selected="false">채팅(0)</a>
+                <a class="nav-link active" data-bs-toggle="tab" href="#profile3" role="tab" aria-selected="false">채팅(0)</a>
                 <div class="slide"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" href="#messages3" role="tab" aria-selected="true">신고(0)</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#messages3" role="tab" aria-selected="true">신고(0)</a>
                 <div class="slide"></div>
             </li>
         </ul>
     </div>
     <!-- 기본정보 -->
-    <form th:object="${adopt}" method="post" id="faqForm" name="faqForm">
+    <form th:object="${chattingForm}" method="post" id="chattingForm" name="chattingForm">
         <input type="hidden" th:field="*{id}">
         <div class="card-header p-b-0">
             <h3 class="sub-title"><strong>기본정보</strong></h3>
         </div>
         <div class="card-block-small p-t-0">
-            <div class="row">
-                <div class="col-lg-3 mb-3">
-                    <div class="row form-group required mb-3">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="animalDivision1Category"><strong>반려동물</strong></label>
-                        <div class="col-sm-12">
-                            <input type="text" th:field="*{animalDivision1Category}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
-                        </div>
-                    </div>
+            <div class="row p-20 p-b-0">
+                <div class="col-12 col-md-6 mb-2 mb-md-0">
+                    <h5><strong>검색결과</strong></h5>
                 </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="row form-group required mb-3">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="animalDivision2Category"><strong>품종</strong></label>
-                        <div class="col-sm-12">
-                            <input type="text" th:field="*{animalDivision2Category}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
-                        </div>
-                    </div>
+                <div class="col-12 col-md-6 text-right">
+                    <button type="button" class="btn btn btn-transparent m-r-5" id="deleteBtn">삭제</button>
+                    <!--                            <button type="button" class="btn btn-transparent" id="insertBtn">등록</button>-->
                 </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="row form-group required mb-3">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="gender"><strong>성별</strong></label>
-                        <div class="col-sm-12">
-                            <input type="text" th:field="*{gender}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="row form-group required mb-3">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="age"><strong>나이</strong></label>
-                        <div class="col-sm-12">
-                            <input type="text" th:field="*{age}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-3">
-                    <div class="mb-0 form-group">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="category"><strong>반려동물</strong></label>
-                        <div class="col-12">
-                            <select class="form-select form-select-sm form-control-sm form-control-round custom-select" th:field="*{status.key}">
-                                <option th:each="status : ${AdoptStatus}" th:value="${status.key}" th:text="${status.value}">value</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-3">
-                    <div class="mb-0 form-group">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="isDeleted"><strong>사용여부</strong></label>
-                        <select th:field="*{isDeleted}" class="form-select form-select-sm form-control-sm form-control-round custom-select">
-                            <option value="Y">사용</option>
-                            <option value="N">사용 안함</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="title"><strong>제목</strong></label>
-                    <div class="col-sm-12">
-                        <input type="text" th:field="*{title}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요.">
-                    </div>
-                </div>
-
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="content"><strong>내용</strong></label>
-                    <div class="col-sm-12">
-                        <textarea rows="5" cols="5" th:field="*{content}" class="form-control form-control-sm form-control-round" placeholder="내용을 입력해주세요." mekc-ck-editor></textarea>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 mb-3">
-                    <div class="mb-0 form-group">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>작성자</strong></label>
-                        <div class="col-sm-12">
-                            <input type="text" th:field="*{createdBy}" class="form-control form-control-sm form-control-round" readonly>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 mb-3">
-                    <div class="mb-0 form-group">
-                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>작성일시</strong></label>
-                        <div class="col-12">
-                            <input type="datetime-local" th:field="*{createdAt}" class="form-control form-control-sm form-control-round" readonly>
-                        </div>
+            </div>
+            <div class="card-block-small">
+                <div class="dt-responsive table-responsive">
+                    <div id="order-table_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                        <table id="chattingListTable" class="display" style="width:100%">
+                            <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>대화상대</th>
+                                <th>분양상태</th>
+                                <th>내용</th>
+                                <th>상태변경일시</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- 버튼영역 -->
-        <div class="card-block-small">
-            <button type="button" class="btn btn-gray m-r-5" id="cancelBtn">취소</button>
-            <button type="button" class="btn btn-primary" id="saveBtn">저장</button>
         </div>
         <!-- // -->
     </form>
@@ -120,67 +59,107 @@
 
 <script>
     $(function () {
-        const faqFormController = {
-            save: function () {
-                const id = $('#id').val();
-                if (!!id) {
-                    // 수정
-                    this.update();
-                } else {
-                    // 저장
-                    this.insert();
+        adoptListTable = $('#chattingListTable').DataTable({
+            select: {
+                style: 'single'
+            },
+            "columnDefs": [
+                {className: "dt-center", targets: "_all"}
+            ],
+            stripeClasses: [],
+            pagingType: 'full_numbers',
+            lengthChange: false,
+            responsive: true,
+            searching: false,
+            destroy: true,
+            ordering: false,
+            paging: true,
+            info: true,
+            pageLength: 10,
+            bPaginate: true,
+            bAutoWidth: true,
+            serverSide: true,
+            processing: true,
+            ajax: {
+                async: false,
+                method: 'GET',
+                url: '/admin/saesigManage/selectChattingListByAdoptId.do',
+                data: function(d) {
+                    var formData  = $('#searchForm').serializeArray();
+                    for(var i = 0; i < formData.length; i++) {
+                        var formName = formData[i].name;
+                        var formVal = $("#"+formName).val();
+                        d[formName] = formVal;
+                    }
+                },
+                "dataSrc": function (res) {
+                    if (res.data.length > 0){
+                        return res.data;
+                    }else{
+                        return false;
+                    }
                 }
             },
 
-            update: function () {
-                if (confirm('수정하시겠습니까?')) {
-                    const id = $('#id').val();
-                    const formData = $('#faqForm').serializeObject();
-                    formData.content = ckeditorApp.getEditorData('content');
+            columns: [
+                {data: 'id'},
+                {render: function (data, type, row) {
+                        return `${row.status.value}`;
+                    }},
+                {data:'title'},
+                {data:'animalDivision1Category'},
+                {data:'animalDivision2Category'},
+                {render : function (data,type,row){
+                        if (row.gender == 'MAN'){
+                            return '수컷';
+                        }else{
+                            return '암컷';
+                        }
+                    }},
+                {data:'age'},
+                {data:'reportCnt'},
+                {data:'chattingCnt'},
+                {data:'likeCnt'},
+                {data:'hits'},
+                {data:'isDeleted'},
+                {data:'createdAt'}
 
-                    $.ajax({
-                        type: 'put',
-                        data: JSON.stringify(formData),
-                        contentType: 'application/json',
-                        dataType: 'json',
-                        url: `/admin/faqs/${id}`
-                    }).done(function(response){
-                        alert('수정 되었습니다.');
-                        console.log(response);
-                    }).fail(function(error){
-                        alert('수정중 에러가 발생하였습니다.');
-                        console.log(JSON.stringify(error));
-                    })
-                }
+            ],
+
+            language: {
+                search: '검색',
+                emptyTable: '데이터가 없습니다.',
+                info: '_START_부터 _END_까지 / 총데이터 : _TOTAL_',
+                infoEmpty: '데이터 0 부터 0 까지 / 총데이터 : 0',
+                lengthMenu: '보기',
+                loadingRecords: '로딩중..',
             },
+            drawCallback: function () {
+                var $api = this.api();
+                var pages = $api.page.info().pages;
 
-            insert: function () {
-                if (confirm('저장하시겠습니까?')) {
-                    const formData = $('#faqForm').serializeObject();
-                    formData.content = ckeditorApp.getEditorData('content');
-
-                    $.ajax({
-                        type: 'post',
-                        data: JSON.stringify(formData),
-                        contentType: 'application/json',
-                        dataType: 'json',
-                        url: '/admin/faqs'
-                    }).done(function(response){
-                        alert('등록 되었습니다.');
-                        console.log(response);
-                    }).fail(function(error){
-                        alert('등록중 에러가 발생하였습니다.');
-                        console.log(JSON.stringify(error));
-                    })
+                if (pages === 0) {
+                    $(".paginate_button").hide();
                 }
             }
+        })
 
-        }
+        adoptListTable.on('select', function (e, dt, type, indexes) {
+            let rowData = adoptListTable.rows(indexes).data().toArray();
+            const selectedAdoptId = rowData[0].id;
 
-        $('body').on('click', '#saveBtn', function (event) {
-            faqFormController.save();
-        }).on('click', '#cancelBtn', function (event) {
-
+            $.ajax({
+                type: 'get',
+                url: `/admin/saesigManage/${selectedAdoptId}/infoForm`,
+                dataType: 'html'
+            }).done(function (response) {
+                console.log(response)
+                $('#contentPanel').html(response);
+            }).fail(function (error) {
+                console.log(error)
+            });
+        }).on('deselect', function (e, dt, type, indexes) {
+            let rowData = adoptListTable.rows(indexes).data().toArray();
         });
     });
 
