--- a/module-admin/src/main/resources/templates/saesigManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/infoForm.html
@@ -2,15 +2,15 @@
     <div class="card-header p-b-0 nav-main">
         <ul class="nav nav-tabs md-tabs" role="tablist">
             <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" href="#home3" role="tab" aria-selected="true">새식정보</a>
+                <a class="nav-link active" data-bs-toggle="tab" href="" role="tab" aria-selected="true">새식정보</a>
                 <div class="slide"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#profile3" role="tab" aria-selected="false">채팅(0)</a>
+                <a class="nav-link" data-bs-toggle="tab" href="" role="tab" aria-selected="false" id="chattingTab">채팅(0)</a>
                 <div class="slide"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#messages3" role="tab" aria-selected="false">신고(0)</a>
+                <a class="nav-link" data-bs-toggle="tab" href="" role="tab" aria-selected="false" id="reportTab">신고(0)</a>
                 <div class="slide"></div>
             </li>
         </ul>
@@ -19,7 +19,12 @@
     <form th:object="${adopt}" method="post" id="adoptForm" name="adoptForm">
         <input type="hidden" th:field="*{id}">
         <div class="card-header p-b-0">
-            <h3 class="sub-title"><strong>기본정보</strong></h3>
+            <h3 class="sub-title"><strong>기본정보</strong>
+                <div class="col-0 col-md-0 text-right">
+                    <button type="button" class="btn btn-transparent" data-bs-toggle="modal" data-bs-target="#imageModalPop" >사진보기</button>
+                    <!--                            <button type="button" class="btn btn-transparent" id="insertBtn">등록</button>-->
+                </div>
+            </h3>
         </div>
         <div class="card-block-small p-t-0">
             <div class="row">
@@ -189,11 +194,70 @@
         <!-- // -->
     </form>
 </div>
+<div class="modal fade" id="imageModalPop" style="top: 23vh;">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content type_1">
+            <div class="modal-header">
+                <h4 class="modal-title">사진보기</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="card">
+                    <div class="card-block-small">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="col-12 img-box-con text-center ">
+                                    <div class="col-1 text-left left-arrow-icon" id="prevSlide"></div>
+                                    <div class="col-10 swiper-container" style="overflow: hidden; display: inline-flex;">
+                                    <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img class="col-0 img-fluid" src="/files/assets/images/logo2.png" alt="banner image" draggable="false"></div>
+                                    <div class="swiper-slide"><img class="col-0 img-fluid" src="/files/assets/images/logo2.png" alt="banner image" draggable="false"></div>
+                                    <div class="swiper-slide"><img class="col-0 img-fluid" src="/files/assets/images/logo2.png" alt="banner image" draggable="false"></div>
+                                    <div class="swiper-slide"><img class="col-0 img-fluid" src="/files/assets/images/logo2.png" alt="banner image" draggable="false"></div>
+                                    </div>
+                                    </div>
+                                    <div class="col-1 text-right right-arrow-icon" id="nextSlide"></div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary waves-effect waves-light" data-bs-dismiss="modal" aria-label="Close">닫기</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script type="text/javascript" th:src="@{/js/ckeditor/ckeditorApplication.js}"></script>
 
 <script>
     $(function () {
+        const mySwiper = new Swiper('.swiper-container', {
+            // 옵션 설정
+            slidesPerView: 1, // 한 번에 표시할 슬라이드 수
+            spaceBetween: 20, // 슬라이드 간 간격 (픽셀)
+            loop: false, // 무한 루프 설정
+            // 기타 옵션 및 콜백 함수 등 추가 가능
+            pagination: {
+                el: '.swiper-pagination', // 페이징 컨테이너 요소
+                clickable: true, // 클릭하여 슬라이드로 이동
+            },
+        });
+
+        document.getElementById('prevSlide').addEventListener('click', function () {
+            mySwiper.slidePrev();
+        });
+        document.getElementById('nextSlide').addEventListener('click', function () {
+            mySwiper.slideNext();
+        });
+
+
+
         const adoptFormController = {
             save: function () {
                 const id = $('#id').val();
