--- a/module-admin/src/main/resources/templates/saesigManage/view.html
+++ b/module-admin/src/main/resources/templates/saesigManage/view.html
@@ -212,6 +212,7 @@
                         // {orderable: false, className: 'select-checkbox', targets: 0, defaultContent: ''},
                         {className: "dt-center", targets: "_all"}
                     ],
+                    stripeClasses: [],
                     pagingType: 'full_numbers',
                     lengthChange: false,
                     responsive: true,
@@ -431,7 +432,7 @@
 
     <script type="text/javascript" th:src="@{/js/ckeditor/build/ckeditor.js}"></script>
     <script type="text/javascript" th:src="@{/js/ckeditor/build/UploadAdapter.js}"></script>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </div>
-
-
 </html>
