--- a/module-admin/src/main/resources/templates/roles/resourceMapping.html
+++ b/module-admin/src/main/resources/templates/roles/resourceMapping.html
@@ -13,8 +13,8 @@
             <h5 class="col-12 col-md-6 mb-3">
                 <strong>자원구조</strong>
             </h5>
-            <div class="col-12 col-md-6 btn-group-sm text-right">
-                <button type="button" id='resourceMappingSaveBtn' class="btn btn-primary btn-sm">저장</button>
+            <div class="col-12 col-md-6 text-right">
+                <button type="button" id='resourceMappingSaveBtn' class="btn btn-primary">저장</button>
             </div>
         </div>
 
@@ -31,182 +31,176 @@
 <script type="text/javascript" src="/files/bower_components/jstree/dist/jstree.js"></script>
 
 <script th:inline="javascript">
-    $(function () {
-        const roleController = {
-            roles: [],
-            $jstree: $('#jstree'),
-            _this: null,
+    var roleController = {
+        roles: [],
+        $jstree: $('#jstree'),
 
-            init: function () {
-                _this = this;
+        init: function () {
+            const _this = this;
+            console.log(_this);
 
-                $.ajax({
-                    url: '/admin/roles',
-                    type: 'get',
-                    async: false
-                }).done(function (response) {
-                    response.forEach(function (element, index) {
-                        _this.roles[index] = {
-                            id: element.id,
-                            parent: element.parentId ?? '#',
-                            text: element.name,
-                            description: element.description,
-                            isEnabled: element.isEnabled,
-                            name: element.name,
-                        };
-                    });
-                }).fail(function (error) {
-                    alert("역할 목록을 조회하는데 실패하였습니다.");
+            $.ajax({
+                url: '/admin/roles',
+                type: 'get',
+                async: false
+            }).done(function (response) {
+                response.forEach(function (element, index) {
+                    _this.roles[index] = {
+                        id: element.id,
+                        parent: element.parentId ?? '#',
+                        text: element.name,
+                        description: element.description,
+                        isEnabled: element.isEnabled,
+                        name: element.name,
+                    };
                 });
+            }).fail(function (error) {
+                alert("역할 목록을 조회하는데 실패하였습니다.");
+            });
 
-                _this.renderJsTree();
-            },
+            _this.renderJsTree();
+        },
 
-            renderJsTree: function () {
-                _this.$jstree.jstree({
-                    "core": {
-                        "animation": 50,
-                        "strings": {
-                            loading: "Loading ..."
-                        },
-                        "themes": {
-                            "responsive": true,
-                        },
-                        'data': _this.roles,
-                        'check_callback': function (operation, node, node_parent, node_position, more) {
-                            if (operation === "move_node") {
-                                return false;
-                            }
-                        }
+        renderJsTree: function () {
+            const _this = this;
+
+            _this.$jstree.jstree({
+                "core": {
+                    "animation": 50,
+                    "strings": {
+                        loading: "Loading ..."
                     },
-                    "types": {
-                        "default": {
-                            "icon": "icofont icofont-user-alt-3"
-                        }
+                    "themes": {
+                        "responsive": true,
                     },
-                    'plugins': ['types']
-                }).bind('move_node.jstree', function (evt, data) {
-                    if (data.rslt.ot != data.rslt.rt) {
-                        console.log("Node was moved to a different tree-instance");
-                    } else {
-                        console.log("Node was moved inside the same tree-instance");
+                    'data': _this.roles,
+                    'check_callback': function (operation, node, node_parent, node_position, more) {
+                        if (operation === "move_node") {
+                            return false;
+                        }
                     }
-                }).bind('select_node.jstree', function (event, data) {
-                    console.log(data);
-                    resourceController.init(_this.$jstree.jstree('get_selected', true)[0].original.id);
-                });
-            },
-        };
-
-        const resourceController = {
-            resources: [],
-            $jstree: $('#jstree2'),
-            changedNode: null,
-            selectedRoleId: null,
-            _this : null,
-
-            init: function (roleId) {
-                _this = this;
-                _this.changedNode = new Map();
-                _this.selectedRoleId = roleId;
-
-                $.ajax({
-                    url: `/admin/roles/${roleId}/mappedResources`,
-                    type: 'get',
-                    async: false
-                }).done(function (response) {
-                    response.forEach(function (element, index) {
-                        _this.resources[index] = {
-                            id: element.id,
-                            parent: element.parentId ? element.parentId : '#',
-                            text: element.name,
-                            type: element.type,
-                            url: element.url,
-                            isEnabled: element.isEnabled,
-                            name: element.name,
-                            state: {opened: true, checked: element.isMapped === 'Y'}
-                        };
-                    });
-                }).fail(function (error) {
-                    alert("자원 목록을 조회하는데 실패하였습니다.");
-                });
-
-                _this.renderJsTree();
-            },
-
-            renderJsTree: function () {
-                _this.$jstree.jstree('destroy');
-
-                _this.$jstree.jstree({
-                    "core": {
-                        "animation": 50,
-                        "strings": {
-                            loading: "Loading ..."
-                        },
-                        "themes": {
-                            "responsive": true,
-                        },
-                        'data': _this.resources,
-                        'check_callback': true
-                    },
-                    "types": {
-                        "DIRECTORY": {
-                            "icon" : "icofont  icofont-folder"
-                        },
-                        "MENU": {
-                            "icon": "icofont icofont-file-alt"
-                        },
-                        "DETAIL_MENU": {
-                            "icon" : "icofont icofont-copy-black"
-                        },
-                        "FUNCTION": {
-                            "icon": "icofont icofont-tools-alt-2"
-                        }
-                    },
-                    'checkbox': {
-                        three_state: false, //
-                        whole_node: false, //
-                        keep_selected_style: false, //
-                        tie_selection: false, //
-                        // cascade: 'up'
-                    },
-                    'plugins': ['types', 'checkbox']
-                }).bind("move_node.jstree", function (event, data) {
-                    if (data.rslt.ot != data.rslt.rt) {
-                        console.log("Node was moved to a different tree-instance");
-                    } else {
-                        console.log("Node was moved inside the same tree-instance");
+                },
+                "types": {
+                    "default": {
+                        "icon": "icofont icofont-user-alt-3"
                     }
-                }).bind('check_node.jstree', function (event, data) {
-                    _this.checkEvent(event.type, data);
-                }).bind('uncheck_node.jstree', function (event, data) {
-                    _this.checkEvent(event.type, data);
-                });
-            },
-
-            checkEvent: function (eventType, data) {
-                if (eventType === 'check_node') {
-                    this.changedNode.set(data.node.id, true);
-                } else if (eventType === 'uncheck_node') {
-                    this.changedNode.set(data.node.id, false);
+                },
+                'plugins': ['types']
+            }).bind('move_node.jstree', function (evt, data) {
+                if (data.rslt.ot != data.rslt.rt) {
+                    console.log("Node was moved to a different tree-instance");
+                } else {
+                    console.log("Node was moved inside the same tree-instance");
                 }
-            }
-        };
+            }).bind('select_node.jstree', function (event, data) {
+                resourceController.init(_this.$jstree.jstree('get_selected', true)[0].original.id);
+            });
+        },
+    };
 
+    var resourceController = {
+        resources: [],
+        $jstree: $('#jstree2'),
+        changedNode: null,
+        selectedRoleId: null,
+
+        init: function (roleId) {
+            const _this = this;
+            _this.changedNode = new Map();
+            _this.selectedRoleId = roleId;
+
+            $.ajax({
+                url: `/admin/roles/${roleId}/mappedResources`,
+                type: 'get',
+                async: false
+            }).done(function (response) {
+                response.forEach(function (element, index) {
+                    _this.resources[index] = {
+                        id: element.id,
+                        parent: element.parentId ? element.parentId : '#',
+                        text: element.name,
+                        type: element.type,
+                        url: element.url,
+                        isEnabled: element.isEnabled,
+                        name: element.name,
+                        state: {opened: true, checked: element.isMapped === 'Y'}
+                    };
+                });
+            }).fail(function (error) {
+                alert("자원 목록을 조회하는데 실패하였습니다.");
+            });
+
+            _this.renderJsTree();
+        },
+
+        renderJsTree: function () {
+            const _this = this;
+
+            _this.$jstree.jstree('destroy');
+
+            _this.$jstree.jstree({
+                "core": {
+                    "animation": 50,
+                    "strings": {
+                        loading: "Loading ..."
+                    },
+                    "themes": {
+                        "responsive": true,
+                    },
+                    'data': _this.resources,
+                    'check_callback': true
+                },
+                "types": {
+                    "DIRECTORY": {
+                        "icon" : "icofont  icofont-folder"
+                    },
+                    "MENU": {
+                        "icon": "icofont icofont-file-alt"
+                    },
+                    "DETAIL_MENU": {
+                        "icon" : "icofont icofont-copy-black"
+                    },
+                    "FUNCTION": {
+                        "icon": "icofont icofont-tools-alt-2"
+                    }
+                },
+                'checkbox': {
+                    three_state: false, //
+                    whole_node: false, //
+                    keep_selected_style: false, //
+                    tie_selection: false, //
+                    // cascade: 'up'
+                },
+                'plugins': ['types', 'checkbox']
+            }).bind("move_node.jstree", function (event, data) {
+                if (data.rslt.ot != data.rslt.rt) {
+                    console.log("Node was moved to a different tree-instance");
+                } else {
+                    console.log("Node was moved inside the same tree-instance");
+                }
+            }).bind('check_node.jstree', function (event, data) {
+                _this.checkEvent(event.type, data);
+            }).bind('uncheck_node.jstree', function (event, data) {
+                _this.checkEvent(event.type, data);
+            });
+        },
+
+        checkEvent: function (eventType, data) {
+            const _this = this;
+
+            if (eventType === 'check_node') {
+                _this.changedNode.set(data.node.id, true);
+            } else if (eventType === 'uncheck_node') {
+                _this.changedNode.set(data.node.id, false);
+            }
+        }
+    };
+    $(function () {
         roleController.init();
 
         $('#resourceMappingSaveBtn').on('click', function () {
             if (confirm('저장하시겠습니까?')) {
                 resourceMapping();
-
-                //변경된 데이터가 있는지 확인
-
-                //json 데이터 생성
-
-                //ajax 호출
-
-                //resource jstree refresh
-
             }
         })
     });
