fix: SNB 배너관리 링크 수정

--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -399,7 +399,7 @@
       <div class="pcoded-navigatio-lavel">통합관리</div>
       <ul class="pcoded-item pcoded-left-item">
         <li class="">
-          <a href="/admin/banner">
+          <a href="/admin/banner/view">
             <span class="pcoded-micon"><i class="feather icon-home"></i></span>
             <span class="pcoded-mtext">배너관리</span>
           </a>
