--- a/module-admin/src/main/resources/templates/faq/form.html
+++ b/module-admin/src/main/resources/templates/faq/form.html
@@ -26,14 +26,14 @@
                         </select>
                     </div>
                 </div>
-                <div class="row form-group required mb-3">
+                <div class="col-lg-12 form-group required mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="title"><strong>제목</strong></label>
                     <div class="col-sm-12">
                         <input type="text" th:field="*{title}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요.">
                     </div>
                 </div>
 
-                <div class="row form-group required mb-3">
+                <div class="col-lg-12 form-group required mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="content"><strong>내용</strong></label>
                     <div class="col-sm-12">
                         <textarea rows="5" cols="5" th:field="*{content}" class="form-control form-control-sm form-control-round" placeholder="내용을 입력해주세요." mekc-ck-editor></textarea>
