--- a/module-admin/src/main/resources/templates/faq/view.html
+++ b/module-admin/src/main/resources/templates/faq/view.html
@@ -163,7 +163,8 @@
                         url: `/admin/faqs?` + $('#searchForm').serialize(),
                         method: 'get',
                         "dataSrc": function (res) {
-                            res.data[0].isFirst = true;
+                            if(res.data[0])
+                                res.data[0].isFirst = true;
                             return res.data;
                         }
                     },
